
message("-- Search for supported gui framework")
if(CCGUI_SUBSYSTEM)
  message("--- Select subsystem: ${CCGUI_SUBSYSTEM}")
  if(NOT "${CCGUI_SUBSYSTEM}" STREQUAL "Generic")
    add_subdirectory(${CCGUI_SUBSYSTEM})
  endif()
else()
  if(NOT QT_QMAKE_EXECUTABLE)
    set(CCGUI_SUBSYSTEM "Qt")
    message("--- Qt found for gui")
    add_subdirectory(Qt)
  elseif(WINDOWS)
    if(DEFINED GCC)
      set(CCGUI_SUBSYSTEM "Generic")
      message("--- Generic gui for mingw")
    else()
      set(CCGUI_SUBSYSTEM "Windows")
      message("--- Windows found")
      add_subdirectory(Windows)
    endif()
  else()
    find_package(X11)
    if(X11_FOUND)
      set(CCGUI_SUBSYSTEM "X11")
      message("--- X11 found")
      add_subdirectory(X11)
    else()
      set(CCGUI_SUBSYSTEM "Generic")
      message("--- No gui framework found")
    endif()
  endif()
endif(CCGUI_SUBSYSTEM)

# Always add generic it will fill all not existing items / buttons / widgets
add_subdirectory(Generic)

push_up_gui_vars()
