
message("-- Search for supported gui framework")
if(CCGUI_SUBSYSTEM)
  message("--- Select subsystem: ${CCGUI_SUBSYSTEM}")
  if(NOT "${CCGUI_SUBSYSTEM}" STREQUAL "Generic")
    include(${CMAKE_CURRENT_LIST_DIR}/${CCGUI_SUBSYSTEM}/CMakeLists.txt)
  endif()
else()
  if(QT_QMAKE_EXECUTABLE)
    set(CCGUI_SUBSYSTEM "Qt")
    message("--- Qt found for gui")
    include(${CMAKE_CURRENT_LIST_DIR}/Qt/CMakeLists.txt)
  elseif(WINDOWS)
    if(DEFINED GCC)
      set(CCGUI_SUBSYSTEM "Qt")
      include(${CMAKE_CURRENT_LIST_DIR}/Qt/CMakeLists.txt)
    else()
      #set(CCGUI_SUBSYSTEM "Windows")
      message("--- Windows found but ignored")
      message("--- Currently only Qt as Gui is supported!")
      set(CCGUI_SUBSYSTEM "Qt")
      include(${CMAKE_CURRENT_LIST_DIR}/Qt/CMakeLists.txt)
    endif()
  else()
    find_package(X11)
    if(X11_FOUND)
      #set(CCGUI_SUBSYSTEM "X11")
      message("--- X11 found but ignored")
      message("--- Currently only Qt as Gui is supported!")
      #include(${CMAKE_CURRENT_LIST_DIR}/X11/CMakeLists.txt)
    else()
      set(CCGUI_SUBSYSTEM "Generic")
      message("--- No gui framework found")
    endif()
  endif()
endif(CCGUI_SUBSYSTEM)

if(NOT CCGUI_SUBSYSTEM)
  set(CCGUI_SUBSYSTEM "Generic")
endif()

# Always add generic it will fill all not existing items / buttons / widgets
include(${CMAKE_CURRENT_LIST_DIR}/Generic/CMakeLists.txt)
